# pr-change-tracker

./: LICENSE  README.rst  alembic.ini  mypy.ini  pyproject.toml
.github/workflows/: release.yml
docs/: conf.py  index.rst
helpers/: pyproject.toml
helpers/pr_change_tracker_test_driver/: comparators.py  fixtures.py  storage.py  version.py
pr_change_tracker/: __init__.py  __main__.py  cli.py  events.py  http_server.py  progress.py  version.py
pr_change_tracker/alembic/: env.py
pr_change_tracker/alembic/versions/: 20260419112446_5a18948025f6_added_pull_request_tables.py  20260419125054_5842845c83bc_adding_event_processing.py
pr_change_tracker/api/github/: __init__.py  _api.py
pr_change_tracker/cli/: __init__.py  _logging.py  _main.py  _options.py
pr_change_tracker/cli/_commands/: __init__.py  _event_processor.py  _serve_http.py
pr_change_tracker/handlers/github/: __init__.py  _errors.py  _event.py  _hooks.py
pr_change_tracker/handlers/github/_processors/: __init__.py  _common.py  _pull_request.py  _pull_request_review.py
pr_change_tracker/handlers/sanic/: __init__.py  _handlers.py
pr_change_tracker/storage/: __init__.py  _details.py  _enums.py  _metadata.py  _pull_requests.py  _storage.py
tests/: conftest.py  test_works.py
tests/fixtures/github/: edited-base  edited-body  edited-title  synchronize
tests/test_github/processors/: test_pull_request.py  test_pull_request_review.py
tools/: .requirements.readthedocs.txt  pyproject.toml  run.py
