[project]
name = "tools"
version = "0.1"
dependencies = [
    "tox==4.53.0",
    "click>=8.3.2",
    "ruff==0.15.11",
    "remote-pdb==2.1.0",
    "alt-pytest-asyncio >= 0.9.5"
]

[project.optional-dependencies]
docs = [
    "sphinx-autobuild==2025.8.25",
    "sphinx-immaterial==0.13.9",
    "sphinx==9.1.0",
    "sphinx-toolbox==4.1.2",
]
